--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "esbuild": "^0.11.16",
     "loadsh": "^0.0.4",
+    "localforage": "^1.9.0",
     "lodash": "^4.17.21",
     "vue": "3.0.11"
   },
